
install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kgamma/pics/
	$(INSTALL_DATA) $(srcdir)/background.png $(kde_datadir)/kgamma/pics/background.png
	$(mkinstalldirs) $(kde_datadir)/kgamma/pics/
	$(INSTALL_DATA) $(srcdir)/cmyscale.png $(kde_datadir)/kgamma/pics/cmyscale.png
	$(mkinstalldirs) $(kde_datadir)/kgamma/pics/
	$(INSTALL_DATA) $(srcdir)/darkgrey.png $(kde_datadir)/kgamma/pics/darkgrey.png
	$(mkinstalldirs) $(kde_datadir)/kgamma/pics/
	$(INSTALL_DATA) $(srcdir)/greyscale.png $(kde_datadir)/kgamma/pics/greyscale.png
	$(mkinstalldirs) $(kde_datadir)/kgamma/pics/
	$(INSTALL_DATA) $(srcdir)/lightgrey.png $(kde_datadir)/kgamma/pics/lightgrey.png
	$(mkinstalldirs) $(kde_datadir)/kgamma/pics/
	$(INSTALL_DATA) $(srcdir)/midgrey.png $(kde_datadir)/kgamma/pics/midgrey.png
	$(mkinstalldirs) $(kde_datadir)/kgamma/pics/
	$(INSTALL_DATA) $(srcdir)/rgbscale.png $(kde_datadir)/kgamma/pics/rgbscale.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/apps/
	$(INSTALL_DATA) $(srcdir)/hi16-app-kgamma_red.png $(kde_icondir)/hicolor/16x16/apps/kgamma.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/apps/
	$(INSTALL_DATA) $(srcdir)/hi32-app-kgamma_red.png $(kde_icondir)/hicolor/32x32/apps/kgamma.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/48x48/apps/
	$(INSTALL_DATA) $(srcdir)/hi48-app-kgamma_red.png $(kde_icondir)/hicolor/48x48/apps/kgamma.png

uninstall-local:
	-rm -f $(kde_datadir)/kgamma/pics/background.png
	-rm -f $(kde_datadir)/kgamma/pics/cmyscale.png
	-rm -f $(kde_datadir)/kgamma/pics/darkgrey.png
	-rm -f $(kde_datadir)/kgamma/pics/greyscale.png
	-rm -f $(kde_datadir)/kgamma/pics/lightgrey.png
	-rm -f $(kde_datadir)/kgamma/pics/midgrey.png
	-rm -f $(kde_datadir)/kgamma/pics/rgbscale.png
	-rm -f $(kde_icondir)/hicolor/16x16/apps/kgamma.png
	-rm -f $(kde_icondir)/hicolor/32x32/apps/kgamma.png
	-rm -f $(kde_icondir)/hicolor/48x48/apps/kgamma.png

